Fix truncate and add back-to articles link

--- a/app/assets/stylesheets/articles.css.scss
+++ b/app/assets/stylesheets/articles.css.scss
@@ -28,8 +28,14 @@ body {
 }
 
 .blog-post {
-  margin-bottom: 60px;
+  margin-bottom: 20px;
 }
+
+.link_to-back-to-articles{
+  position:relative;
+  padding-bottom:20px;
+}
+
 .blog-post-title {
   margin-bottom: 5px;
   font-size: 40px;
