--- a/app/assets/stylesheets/comments.css.scss
+++ b/app/assets/stylesheets/comments.css.scss
@@ -20,6 +20,7 @@
     1px 1px 0 #000;
 }
 .comments-count{
+  margin-top: 20px;
 	font-family: cabin;
 	font-size: 25px;
 }
